--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,8 +22,8 @@
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
 
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
+    --accent: 208 100% 50%;
+    --accent-foreground: 208 100% 99%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
@@ -54,8 +54,8 @@
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
 
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --accent: 208 100% 50%;
+    --accent-foreground: 208 100% 99%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
@@ -69,14 +69,37 @@
 @layer base {
   * {
     @apply border-border;
+    scroll-behavior:smooth
   }
   body {
     @apply bg-background text-foreground;
+    scroll-behavior:smooth
+  }
+  @media (prefers-color-scheme: dark) {
+    body {
+      @apply dark;
+    }
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    @apply dark;
-  }
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: transparent;
 }
+
+::-webkit-scrollbar-thumb {
+  background-color: hsl(208 100% 50%);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(208 100% 45%);
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+/* End Custom Scrollbar */
